# contextclean

./: .ctxcleanignore  .ctxcleanignore.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  action.yml  wrangler.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: action-smoke.yml  ci.yml  release.yml
benchmarks/: README.md  results.json  results.md
benchmarks/fixtures/: html_scrape_large.html
crates/contextclean-cli/: Cargo.toml  README.md
crates/contextclean-cli/src/: args.rs  exit.rs  lib.rs  main.rs  mcp.rs  support.rs
crates/contextclean-cli/tests/: cli_smoke.rs
crates/contextclean-core/: Cargo.toml  README.md
crates/contextclean-core/src/: budget.rs  cleaner.rs  config.rs  error.rs  html.rs  lib.rs  logs.rs  models.rs  renderer.rs  report.rs  scanner.rs
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT.md  GITHUB_TOPICS.md  HOMEBREW.md  LAUNCH_POST.md  MCP_COMPATIBILITY.md  MODES.md  MVP_SCOPE.md  OUTPUT_SCHEMAS.md  PRODUCT_BRIEF.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  V2_ISSUES.md  benchmarks.md  commands.md  redaction.md
examples/: agent-pipeline.md  agent-workflow.md  basic-clean.md  config-file.toml  github-actions.yml  langchain_helper.py  llamaindex_helper.py  mcp-client.json
fixtures/: ci_failure_log.txt  dirty_html_article.html  dirty_html_small.html  malformed_browser_export.html  mixed_markdown.md  repeated_log.txt
fixtures/simple_project/: .env.example  README.md
fixtures/simple_project/src/: app.rs
scripts/: benchmarks.ps1  check.ps1  check.sh
site/: index.html  styles.css
