[workspace]
members = [
    "crates/contextclean-cli",
    "crates/contextclean-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["ContextClean contributors"]
homepage = "https://contextclean.pages.dev/"
documentation = "https://contextclean.pages.dev/"
repository = "https://github.com/karurikwao/contextclean"
description = "Local-first context cleaner for AI agents."
keywords = ["llm", "cli", "context", "tokens", "ai-agents"]
categories = ["command-line-utilities", "text-processing", "development-tools"]

[workspace.dependencies]
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
predicates = "3.1"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
tiktoken-rs = "0.9.0"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
